Refactor:swagger
