# app/Http/Resources/Api/Dashboard/TenantResource.php
@@ -11,41 +11,46 @@ use App\Http\Resources\Api\Dashboard\OccupantResource;
 
 /**
  * @OA\Schema(
- * schema="TenantResource",
- * title="Tenant Resource",
- * description="Tenant model representation",
- * @OA\Property(property="id", type="integer", example=1),
- * @OA\Property(property="roomId", type="string", format="uuid", example="9a7c6f2c-5b8a-4f2a-8f2c-6d8b3a0c1e9f"),
- * @OA\Property(
- * property="name",
- * type="array",
- * @OA\Items(type="string"),
- * example={"John Doe", "Jane Doe"}
- * ),
- * @OA\Property(
- * property="nrc",
- * type="array",
- * @OA\Items(type="string"),
- * example={"12/ABC(N)123456", "12/DEF(N)654321"}
- * ),
- * @OA\Property(
- * property="email",
- * type="array",
- * @OA\Items(type="string", format="email"),
- * example={"john.doe@example.com", "jane.doe@example.com"}
- * ),
- * @OA\Property(
- * property="phNumber",
- * type="array",
- * @OA\Items(type="string"),
- * example={"09123456789", "09987654321"}
- * ),
- * @OA\Property(
- * property="emergencyNo",
- * type="array",
- * @OA\Items(type="string"),
- * example={"09111222333", "09444555666"}
- * )
+ *   schema="TenantResource",
+ *   title="Tenant Resource",
+ *   description="Tenant model representation",
+ *   @OA\Property(property="id", type="integer", example=1),
+ *   @OA\Property(property="roomId", type="string", format="uuid", example="9a7c6f2c-5b8a-4f2a-8f2c-6d8b3a0c1e9f"),
+ *   @OA\Property(
+ *     property="name",
+ *     type="array",
+ *     @OA\Items(type="string"),
+ *     example={"John Doe", "Jane Doe"}
+ *   ),
+ *   @OA\Property(
+ *     property="nrc",
+ *     type="array",
+ *     @OA\Items(type="string"),
+ *     example={"12/ABC(N)123456", "12/DEF(N)654321"}
+ *   ),
+ *   @OA\Property(
+ *     property="email",
+ *     type="array",
+ *     @OA\Items(type="string", format="email"),
+ *     example={"john.doe@example.com", "jane.doe@example.com"}
+ *   ),
+ *   @OA\Property(
+ *     property="phNumber",
+ *     type="array",
+ *     @OA\Items(type="string"),
+ *     example={"09123456789", "09987654321"}
+ *   ),
+ *   @OA\Property(
+ *     property="emergencyNo",
+ *     type="array",
+ *     @OA\Items(type="string"),
+ *     example={"09111222333", "09444555666"}
+ *   ),
+ *   @OA\Property(
+ *     property="occupants",
+ *     type="array",
+ *     @OA\Items(ref="#/components/schemas/OccupantResource")
+ *   )
  * )
  */
 class TenantResource extends JsonResource
